--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 						</div>
 
 						<div class="toysi-product-list-container">
-							<ul>
+							<ul class="toysi-action-carousel">
 								<li>
 									<div>
 										<a class="toysi-product-list-container__title">Машинка Dodge Viper GTS Coupe и еще много букв которые всеравно влезают</a>
@@ -361,7 +361,7 @@
 										<div class="toysi-product-list-container__user-joined">
 											<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
 											<div class="clearfix">
-												<p class="toysi-product-list-container__price pull-left">34 <small>грн.</small></p>
+												<p class="toysi-product-list-container__price pull-left">134 <small>грн.</small></p>
 												<p class="toysi-product-list-container__old-price pull-right">34 <small>грн.</small></p>
 											</div>
 										</div>
@@ -389,7 +389,7 @@
 										<div class="toysi-product-list-container__user-joined">
 											<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
 											<div class="clearfix">
-												<p class="toysi-product-list-container__price pull-left">34 <small>грн.</small></p>
+												<p class="toysi-product-list-container__price pull-left">234 <small>грн.</small></p>
 												<p class="toysi-product-list-container__old-price pull-right">34 <small>грн.</small></p>
 											</div>
 										</div>
@@ -417,7 +417,7 @@
 										<div class="toysi-product-list-container__user-joined">
 											<p class="toysi-product-list-container__to-store">На складе: 123 шт.</p>
 											<div class="clearfix">
-												<p class="toysi-product-list-container__price pull-left">34 <small>грн.</small></p>
+												<p class="toysi-product-list-container__price pull-left">344 <small>грн.</small></p>
 												<p class="toysi-product-list-container__old-price pull-right">34 <small>грн.</small></p>
 											</div>
 										</div>
@@ -425,8 +425,11 @@
 									</div>
 								</li>
 							</ul>
-							<div class="clearfix"></div>
-							<div class="toysi-carousel-control"></div>
+							<div class="toysi-carousel-control">
+								<button class="toysi-carousel-control__prev"></button>
+								<div class="toysi-carousel-control__pager"></div>
+								<button class="toysi-carousel-control__next"></button>
+							</div>
 						</div>
 					</div>
 					<div class="toysi-map-container">
