--- a/reg.html
+++ b/reg.html
@@ -71,10 +71,7 @@
 							</div>
 							<div class="form-group">
 								<div class="col-sm-12 toysi-necessarily has-error">
-									<select class="toysi-form-control form-control" name="">
-										<option value="" selected disabled>Город</option>
-									</select>
-									<s class="toysi-point"></s>
+									<input name="" type="text" class="toysi-form-control form-control" placeholder="Город" value="" /><s class="toysi-point"></s>
 								</div>
 							</div>
 							<div class="form-group">
