--- a/product_1.html
+++ b/product_1.html
@@ -56,6 +56,7 @@
 					<div class="pull-left">
 						<div class="toysi-big-image-product">
 							<img src="images/big-image-product01.jpg" width="500" height="376" alt="Ролики Kepai s35" title="Ролики Kepai s35" />
+							<div class="toysi-new-product">Новинка</div>
 						</div>
 						<div class="toysi-mini-slides-gallery">
 							<ul>
@@ -64,6 +65,45 @@
 								<li><img src="images/gallery03.jpg" width="160" height="120" alt="" title="" /></li>
 								<li><img src="images/gallery04.jpg" width="160" height="120" alt="" title="" /></li>
 							</ul>
+						</div>
+					</div>
+
+					<div class="pull-right">
+						<div class="toysi-product-container__counter">
+							<form>
+								<div class="toysi-base-padding">
+									<p class="_color_green">Код товара: 12786</p>
+									<p class="toysi-text">На складе: 123 шт.</p>
+								</div>
+								<div class="toysi-line"></div>
+								<div class="toysi-product-price text-center">48.00<small> грн.</small></div>
+								<div class="toysi-line"></div>
+								<div class="toysi-base-padding clearfix">
+									<div class="toysi-product-list-container__counter pull-left">
+										<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+										<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+										<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
+									</div>
+									<div class="toysi-product-list-container__buttons-count pull-right">
+										<button>+ 5</button>
+										<button>+ 15</button>
+										<button>+ 25</button>
+									</div>
+								</div>
+								<div class="toysi-base-padding toysi-correct-padding">
+									<p class="toysi-text">Количество: 234шт.</p>
+									<p class="toysi-text">Цена партии: 11 232 грн.</p>
+								</div>
+								<div class="toysi-line"></div>
+								<div class="toysi-base-padding">
+									<p class="_color_green">Ваш комментарий:</p>
+									<textarea></textarea>
+								</div>
+								<div class="toysi-line"></div>
+								<div class="toysi-base-padding">
+									<button class="toysi-btn toysi-btn-red toysi-btn-cart btn">В корзину</button>
+								</div>
+							</form>
 						</div>
 					</div>
 
