--- a/product_1.html
+++ b/product_1.html
@@ -70,40 +70,63 @@
 
 					<div class="pull-right">
 						<div class="toysi-product-container__counter">
-							<form>
-								<div class="toysi-base-padding">
-									<p class="_color_green">Код товара: 12786</p>
-									<p class="toysi-text">На складе: 123 шт.</p>
+							<div class="toysi-base-padding">
+								<p class="_color_green">Код товара: 12786</p>
+								<p class="toysi-text">На складе: 123 шт.</p>
+							</div>
+							<div class="toysi-line"></div>
+							<div class="toysi-product-price text-center">48.00<small> грн.</small></div>
+							<div class="toysi-line"></div>
+							<div class="toysi-base-padding clearfix">
+								<div class="toysi-product-list-container__counter pull-left">
+									<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
+									<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
+									<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
 								</div>
-								<div class="toysi-line"></div>
-								<div class="toysi-product-price text-center">48.00<small> грн.</small></div>
-								<div class="toysi-line"></div>
-								<div class="toysi-base-padding clearfix">
-									<div class="toysi-product-list-container__counter pull-left">
-										<button class="toysi-product-list-container__control toysi-product-list-container__control-up"></button>
-										<input class="toysi-product-list-container__input-count" type="text" value="1 шт." name="tsCountProduct" />
-										<button class="toysi-product-list-container__control toysi-product-list-container__control-down"></button>
-									</div>
-									<div class="toysi-product-list-container__buttons-count pull-right">
-										<button>+ 5</button>
-										<button>+ 15</button>
-										<button>+ 25</button>
-									</div>
+								<div class="toysi-product-list-container__buttons-count pull-right">
+									<button>+ 5</button>
+									<button>+ 15</button>
+									<button>+ 25</button>
 								</div>
-								<div class="toysi-base-padding toysi-correct-padding">
-									<p class="toysi-text">Количество: 234шт.</p>
-									<p class="toysi-text">Цена партии: 11 232 грн.</p>
-								</div>
-								<div class="toysi-line"></div>
-								<div class="toysi-base-padding">
-									<p class="_color_green">Ваш комментарий:</p>
-									<textarea></textarea>
-								</div>
-								<div class="toysi-line"></div>
-								<div class="toysi-base-padding">
-									<button class="toysi-btn toysi-btn-red toysi-btn-cart btn">В корзину</button>
-								</div>
-							</form>
+							</div>
+							<div class="toysi-base-padding toysi-correct-padding">
+								<p class="toysi-text">Количество: 234шт.</p>
+								<p class="toysi-text">Цена партии: 11 232 грн.</p>
+							</div>
+							<div class="toysi-line"></div>
+							<div class="toysi-base-padding">
+								<p class="_color_green">Ваш комментарий:</p>
+								<textarea></textarea>
+							</div>
+							<div class="toysi-line"></div>
+							<div class="toysi-base-padding">
+								<button class="toysi-btn toysi-btn-red toysi-btn-cart btn">В корзину</button>
+							</div>
+						</div>
+						<div class="toysi-terms-container">
+							<div class="toysi-base-padding">
+								<p class="toysi-title-section toysi-cash-icon">Оплата</p>
+								<ul>
+									<li>Безналичный расчет</li>
+									<li>Оплата при получении</li>
+									<li>Предоплата</li>
+								</ul>
+							</div>
+							<div class="toysi-line"></div>
+							<div class="toysi-base-padding">
+								<p class="toysi-title-section toysi-delivery-icon">Доставка</p>
+								<ul>
+									<li>Самовывоз со склада компании собственным транспортом.</li>
+									<li>Доставка Курьерской отправка товара за счет покупателя курьерскими службами доставки: Новая Почта; Интайм; Деливери.</li>
+								</ul>
+							</div>
+							<div class="toysi-line"></div>
+							<div class="toysi-base-padding">
+								<p class="toysi-title-section toysi-safeguards-icon">Гарантии</p>
+								<ul>
+									<li>Мы производим обмен товара, но доставка обмена и брака производится клиентом.</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 
