--- a/kategoria_1.html
+++ b/kategoria_1.html
@@ -340,6 +340,15 @@
 					</div>
 					<div class="clearfix"></div>
 				</div>
+				<div class="toysi-page-container">
+					<a class="toysi-prev"><</a>
+					<a>1</a>
+					<a href="#">2</a>
+					<a href="#">3</a>
+					<a href="#">4</a>
+					<a href="#">5</a>
+					<a class="toysi-next" href="#">></a>
+				</div>
 				<div class="toysi-download-product-btn-container text-center">
 					<button type="button" class="toysi-btn toysi-btn-red btn">Загрузить еще 18 товаров</button>
 				</div>
