--- a/cabinet.html
+++ b/cabinet.html
@@ -68,7 +68,7 @@
 						<div class="form-group">
 							<div class="col-sm-6 toysi-necessarily">
 								<label>Пароль:</label>
-								<input form="toysi-personal-data" name="" type="text" class="toysi-form-control form-control" placeholder="Пароль" value="" />
+								<input form="toysi-personal-data" name="" type="password" class="toysi-form-control form-control" placeholder="Пароль" value="" />
 							</div>
 							<div class="col-sm-6 toysi-necessarily">
 								<label>Фамилия:</label>
@@ -78,7 +78,7 @@
 						<div class="form-group">
 							<div class="col-sm-6 toysi-necessarily">
 								<label>Подтверждение пароля:</label>
-								<input form="toysi-personal-data" name="" type="text" class="toysi-form-control form-control" placeholder="Подтверждение пароля" value="" />
+								<input form="toysi-personal-data" name="" type="password" class="toysi-form-control form-control" placeholder="Подтверждение пароля" value="" />
 							</div>
 							<div class="col-sm-6 toysi-necessarily">
 								<label>Email:</label>
