Add button for slider

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 							</ul>
 						</div>
 						<ul class="toysi-slider-pages slider-pages"></ul>
-						<a class="toysi-slider-nav-prev slider-nav-prev"></a>
-						<a class="toysi-slider-nav-next slider-nav-next"></a>
+						<a class="toysi-slider-nav toysi-slider-nav-prev slider-nav-prev"></a>
+						<a class="toysi-slider-nav toysi-slider-nav-next slider-nav-next"></a>
 					</div>
 					<table class="toysi-shop-info table">
 						<tbody>
