--- a/remember_pass.html
+++ b/remember_pass.html
@@ -17,36 +17,22 @@
 	</div>
 	<div class="toysi-blue-bg toysi-bottom-box-shadow toysi-title-page-height">
 		<div class="container clearfix">
-			<h1 class="toysi-login-page-container toysi-title-page pull-left">Вход</h1>
-			<a class="toysi-title-link pull-right" href="#">Регистрация</a>
+			<h1 class="toysi-title-page text-center">Восстановление пароля</h1>
 		</div>
 	</div>
 	<div class="toysi-white-bg">
 		<div class="container">
-			<div class="toysi-login-page-container">
-				<form class="form-horizontal" method="post">
-					<p class="toysi-text-danger hide">Не верный логин или пароль!</p>
+			<div class="toysi-password-reset-container">
+				<div class="form-horizontal">
 					<div class="toysi-form-group form-group">
-						<div class="toysi-login-input-width">
-							<input class="toysi-form-control toysi-form-verify form-control pull-left" name="tsLogin" type="text" placeholder="Логин" value="" />
+						<div class="toysi-password-reset-input-width">
+							<input class="toysi-form-control form-control" name="tsEmail" type="text" placeholder="Емайл" value="" />
 						</div>
 					</div>
 					<div class="toysi-form-group form-group">
-						<div class="toysi-login-input-width">
-							<input class="toysi-form-control toysi-form-verify form-control" name="tsPass" type="password" placeholder="Пароль" value="" />
-						</div>
+						<button type="button" class="toysi-btn toysi-btn-red btn pull-left">Восстановить</button>
 					</div>
-					<div class="toysi-form-group form-group">
-						<button type="submit" class="toysi-login-btn toysi-btn toysi-btn-red btn pull-left">Войти</button>
-						<div class="toysi-pull-left pull-left">
-							<div class="toysi-checkbox-control">
-								<input type="checkbox" name="tsRememberPass" id="tsRememberPass" checked />
-								<label for="tsRememberPass">запомнить пароль</label>
-							</div>
-							<a href="#" class="toysi-password-reset">Восстановить пароль</a>
-						</div>
-					</div>
-				</form>
+				</div>
 			</div>
 		</div>
 	</div>
